<resources>
    <string name="app_name">Wallpaper 4 Gamerz</string>
    <string name="action_settings">Settings</string>

    <string name="analytics_item_id_2">wallpaper_menu</string>
    <string name="analytics_item_name_2">Wallpaper Menu</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="auto_wallpaper">Auto Wallpaper</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="desc">desc</string>
    <string name="dialog_close_msg">Are you sure you want to quit?</string>
    <string name="dialog_option_more">More Apps</string>
    <string name="dialog_option_rate_us">Rate Us</string>
    <string name="dialog_option_yes">Yes</string>
    <string name="dmcatext1">All the wallpapers in this app are under common creative license and the credit goes to their respective owners.No copyright infringement is intended and any request to remove one of the images/logos/names will be honored . this is an unofficial application and we are not affiliated approved or sponsored specially by any company.</string>
    <string name="downloading">Downloading Image…</string>
    <string name="drawer_category">Games</string>
    <string name="drawer_favorite">Favorite</string>
    <string name="drawer_more">More wallpapers</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_policy">Privacy Policy</string>
    <string name="drawer_rate">Rate the app</string>
    <string name="drawer_recent">Recent</string>
    <string name="drawer_share">Share with your friends</string>
    <string name="fcm_fallback_notification_channel_label">Miscellaneous</string>
    <string name="header_auto_wallpaper">Auto wallpaper</string>
    <string name="image_zoom">Zoom</string>
    <string name="menu_fav">Favorite</string>
    <string name="menu_save" />
    <string name="menu_set_as_wallpaper" />

    <string name="network_error">Please try again !</string>
    <string name="network_first_load">Turn on your wifi</string>
    <string name="no_favorite_found">No favorite wallpapers found</string>
    <string name="permisson_message">this app required to access storage!</string>
    <string name="permisson_title">Permission Required!</string>
    <string name="pick_image_intent_chooser_title">Select source</string>
    <string name="please_wait">please wait</string>
    <string name="privacy_policy_url">https://sites.google.com/view/kkinfosis-pp/home</string>
    <string name="refresh_alert">Please enable your internet connection to load new images</string>

    <string name="s1">Save image</string>
    <string name="s2">Allow Ad to store image in Picture gallery?</string>
    <string name="s3">Accept</string>
    <string name="s4">Decline</string>
    <string name="s5">Create calendar event</string>
    <string name="s6">Allow Ad to create a calendar event?</string>
    <string name="s7">Test Ad</string>
    <string name="saved_folder_name">kkinfosisGaming</string>
    <string name="saved_successfully">Image Saved Successfully</string>
    <string name="search">Search</string>
    <string name="search_hint">Searching</string>
    <string name="share_text">Here my favorite wallpaper, check this out!</string>
    <string name="splash_name">Gaming HD</string>
    <string name="tab_category">Games</string>
    <string name="tab_favorite">Popular</string>
    <string name="tab_premium">Premium</string>
    <string name="tab_recent">Recent</string>
    <string name="text_message">Please download at least 10 images so that the Autowallpaper Changer can Work!</string>
    <string name="text_messagecontains">Auto Wallpaper Changer Changes your wallpaper As per Time </string>
    <string name="time">Select Duration</string>
    <string name="time_duration">Time Duration</string>
    <string name="wallpaper_set">Wallpaper Set</string>
    <string name="downlaoded">Downloads</string>
    <string name="drawer_downloads">Downloads</string>
    <string name="select_all">select all</string>
    <string name="delete">delete</string>
    <string name="select_none">deselect all</string>
    <string name="attiontion">Attention</string>
    <string name="delete_select">Please select at least one image to delete</string>
    <string name="cancel">CANCEL</string>
    <string name="ok">OK</string>



</resources>
